--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/img/Dominho.png
     - assets/img/vector1.png
     - assets/img/vector2.png
     - assets/img/vector3.png
