--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,10 +69,15 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/Dominho.png
-    - assets/img/vector1.png
-    - assets/img/vector2.png
-    - assets/img/vector3.png
-    - assets/img/vector4.png
+    - assets/profile_smp1.png
+    - assets/profile_smp2.png
+    - assets/profile_smp3.png
+    - assets/profile_smp4.png
+    - assets/profile_smp5.png
+    - assets/profile_smp6.png
+    - assets/profile_smp7.png
+    - assets/profile_smp8.png
+    - assets/profile_smp9.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
