--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/Dominho.png
-
+    - assets/img/vector1.png
+    - assets/img/vector2.png
+    - assets/img/vector3.png
+    - assets/img/vector4.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
