--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.18.0
+  intl: ^0.19.0
   shared_preferences: ^2.3.1
+  dio: ^5.5.0+1
 
 
 
@@ -42,7 +43,6 @@ dependencies:
   provider: ^6.1.2
   http: ^1.2.2
   fluttertoast: ^8.2.6
-  dio: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -53,7 +53,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
