--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   shared_preferences: ^2.3.1
   dio: ^5.5.0+1
   image_picker: ^1.1.2
+  carousel_slider: ^5.0.0
 
 
 
@@ -69,7 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/img/Dominho.png
+    - assets/img/dominho.png
     - assets/img/vector1.png
     - assets/img/vector2.png
     - assets/img/vector3.png
@@ -83,6 +84,13 @@ flutter:
     - assets/img/profile_smp7.png
     - assets/img/profile_smp8.png
     - assets/img/profile_smp9.png
+    - assets/img/tutor/tutor_1.png
+    - assets/img/tutor/tutor_2.png
+    - assets/img/tutor/tutor_3.png
+    - assets/img/tutor/tutor_4.png
+    - assets/img/tutor/tutor_5.png
+    - assets/img/tutor/tutor_6.png
+    - assets/img/tutor/tutor_7.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
