나의 목표 GUI 수정

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   provider: ^6.1.2
   http: ^1.2.2
   fluttertoast: ^8.2.6
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
