--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   dio: ^5.5.0+1
   image_picker: ^1.1.2
   video_player: ^2.9.1
-  
+  flutter_dotenv: ^5.0.2
 
 
 
@@ -88,6 +88,7 @@ flutter:
     - assets/img/profile_smp9.png
     - assets/img/domino_final.mp4 #도미노 쓰러지는 영상
     - assets/img/confetti_final.mp4 #폭죽 터지는 영상
+    - assets/config/.env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
