--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,9 @@ flutter:
     - assets/img/profile_smp6.png
     - assets/img/profile_smp7.png
     - assets/img/profile_smp8.png
+    - assets\img\MG_domino3.png
+    - assets\img\MG_domino2.png
+    - assets\img\MG_domino.png
     - assets/img/profile_smp9.png
     - assets/img/domino_final.mp4 #도미노 쓰러지는 영상
     - assets/img/confetti_final.mp4 #폭죽 터지는 영상
