--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.1.2
   http: ^1.2.2
   fluttertoast: ^8.2.6
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
