--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,8 @@ flutter:
     - assets/img/profile_smp8.png
     - assets\img\completed_goals.png   #쓰러뜨린 목표
     - assets\img\failed_goals.png    #쓰러뜨리지 못한 목표
+    - assets\img\if_no_img.png 
+    - assets\img\domino_calculate.png 
     
     - assets\img\MG_domino3.png
     - assets\img\MG_domino2.png
