--- a/android/.gitignore
+++ b/android/.gitignore
@@ -11,3 +11,28 @@ GeneratedPluginRegistrant.java
 key.properties
 **/*.keystore
 **/*.jks
+
+//추가
+buildscript {
+ext. kotlin_version = '1.7.20'
+repositories {
+google()
+mavenCentral()
+
+dependencies {
+classpath 'com. android. tools. build: gradle:7.3.1'
+
+allprojects {
+repositories {
+google()
+mavenCentral()
+
+rootProject.buildDir = ' .. /build'
+subprojects {
+project.buildDir = "${rootProject.buildDir}/${project.name}"
+
+subprojects {
+project. evaluationDependsOn(':app')
+
+tasks.register("clean", Delete) {
+delete rootProject.buildDir
