--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/Dominho.png
+    - assets/img/BG_image.png
     - assets/img/LRDominho.png
     - assets/img/Dominho2.png
     - assets/img/vector1.png
