--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: domino
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ">=3.3.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -39,8 +39,6 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   url_launcher: ^6.1.10
   auto_size_text: ^3.0.0
-
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -69,7 +67,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -93,14 +90,11 @@ flutter:
     - assets/img/profile_smp6.png
     - assets/img/profile_smp7.png
     - assets/img/profile_smp8.png
-    - assets\img\completed_goals.png   #쓰러뜨린 목표
-    - assets\img\failed_goals.png    #쓰러뜨리지 못한 목표
-    - assets\img\if_no_img.png 
-    - assets\img\domino_calculate.png 
-    - assets\img\domino.png 
-
-    - assets\img\MG_domino3.png
-    - assets\img\MG_domino2.png
+    - assets\img\completed_goals.png #쓰러뜨린 목표
+    - assets\img\failed_goals.png #쓰러뜨리지 못한 목표
+    - assets\img\if_no_img.png
+    - assets\img\domino_calculate.png
+    - assets\img\domino.png
     - assets\img\MG_domino.png
     - assets/img/profile_smp9.png
     - assets/img/domino_final.mp4 #도미노 쓰러지는 영상
