--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ flutter:
     - assets/img/vector2.png
     - assets/img/vector3.png
     - assets/img/vector4.png
+    - assets/img/Tutorial2.png
     - assets/img/profile_smp1.png
     - assets/img/profile_smp2.png
     - assets/img/profile_smp3.png
