--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,13 @@ flutter:
     - assets/img/domino_final.mp4 #도미노 쓰러지는 영상
     - assets/img/confetti_final.mp4 #폭죽 터지는 영상
     - assets/config/.env
+    - assets\img\MG_white_yellow.png
+    - assets\img\MG_blue.png
+    - assets\img\MG_green.png
+    - assets\img\MG_red.png
+    - assets\img\MG_orange.png
+    
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
