--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-package="com.example.flutterdemo">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:enableOnBackInvokedCallback="true"
         android:label="front_end_develop"
