--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,15 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        // 최신 AGP 버전으로 업데이트
+        classpath 'com.android.tools.build:gradle:7.0.3'
+        // Kotlin 버전을 최신으로 설정
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.1"  
+    }
+}
 allprojects {
     repositories {
         google()
