--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   percent_indicator: ^4.2.3
   smooth_page_indicator: ^1.2.0+3
   carousel_slider: ^5.0.0
+  flutter_local_notifications: ^18.0.1
+  timezone: ^0.10.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
