--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -113,6 +113,7 @@ flutter:
     - assets/img/MG_red.png
     - assets/img/MG_orange.png
     - assets/img/splash.png
+    - assets/img/AI_icon.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
