--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,10 +1,9 @@
 flutter_native_splash:
-  color: "#000000"  # 배경 색상을 검은색으로 설정
-  background_image: "assets/img/splash.png"  # 원하는 배경 이미지 경로 설정 (옵션)
+  color: "#1E1E1E"  # 배경 색상을 검은색으로 설정
+  # background_image: "assets/img/splash.png"  # 원하는 배경 이미지 경로 설정 (옵션)
+
+  image: "assets/img/new2_splash.png"  # 사용하려는 이미지 파일 경로 (옵션)
 
   android_12:
-    color: "#000000"  # Android 12에서의 배경 색상 설정
+    color: "#1E1E1E"  # Android 12에서의 배경 색상 설정
 
-  image: "assets/img/splash.png"  # 사용하려는 이미지 파일 경로 (옵션)
-
-  # 추가적으로 다른 설정을 넣을 수 있습니다.
